intTests/test_type_errors/err018.log.good
Loading file "err018.saw"
Type errors:
  err018.saw:26:11-26:12: Error: Type mismatch.
    Expected: String
    Found:    Int

    Expected: {
          amethyst : String,
          moonstone : String,
          obsidian : String,
          turquoise : String
       }
    Found: {
          amethyst : Int,
          moonstone : Int,
          obsidian : Int,
          turquoise : Int
       }

  err018.saw:16:14-16:20: Note: The type String arises from this type annotation
  err018.saw:23:25-23:26: Note: The type Int arises from the type of this term

  err018.saw:26:11-26:12: Error: Type mismatch.
    Expected: String
    Found:    Int

    Expected: {
          amethyst : String,
          moonstone : String,
          obsidian : String,
          turquoise : String
       }
    Found: {
          amethyst : Int,
          moonstone : Int,
          obsidian : Int,
          turquoise : Int
       }

  err018.saw:17:15-17:21: Note: The type String arises from this type annotation
  err018.saw:23:38-23:39: Note: The type Int arises from the type of this term

  err018.saw:26:11-26:12: Error: Type mismatch.
    Expected: String
    Found:    Int

    Expected: {
          amethyst : String,
          moonstone : String,
          obsidian : String,
          turquoise : String
       }
    Found: {
          amethyst : Int,
          moonstone : Int,
          obsidian : Int,
          turquoise : Int
       }

  err018.saw:18:14-18:20: Note: The type String arises from this type annotation
  err018.saw:23:50-23:51: Note: The type Int arises from the type of this term

  err018.saw:26:11-26:12: Error: Type mismatch.
    Expected: String
    Found:    Int

    Expected: {
          amethyst : String,
          moonstone : String,
          obsidian : String,
          turquoise : String
       }
    Found: {
          amethyst : Int,
          moonstone : Int,
          obsidian : Int,
          turquoise : Int
       }

  err018.saw:19:15-19:21: Note: The type String arises from this type annotation
  err018.saw:23:63-23:64: Note: The type Int arises from the type of this term


FAILED
